--- a/hugo.toml
+++ b/hugo.toml
@@ -1,29 +1,20 @@
-baseURL = 'https://nextworklab.co.kr/'
-languageCode = 'en-us'
-title = 'NextWork Lab.'
-[params]
-  description = "제품 소개 및 사용설명서"
-[frontmatter]
-  format = "yaml"
-
-
 [menu]
   [[menu.main]]
     name = "About"
-    url = "/about/"
+    url = "#about"
     weight = 10
 
   [[menu.main]]
     name = "CBW"
-    url = "/cbw/"
+    url = "#cbw"
     weight = 20
 
   [[menu.main]]
     name = "exgel"
-    url = "/exgel/"
+    url = "#exgel"
     weight = 30
 
   [[menu.main]]
     name = "Contact"
-    url = "/contact/"
+    url = "#contact"
     weight = 40
