--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,7 @@
-baseURL = "https://nextworklab.co.kr/"
+baseURL = "https://nextworklab.github.io/nextworklab-site/"
+relativeURLs = true
+canonifyURLs = true
+
 languageCode = "en-us"
 title = "NextWork Lab."
 
